--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jsx",
   "version": "0.1.0",
+  "homepage": "https://anand346.github.io/React-youtube",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -13,6 +14,8 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "faker": "^6.6.6"
+    "faker": "^6.6.6",
+    "gh-pages": "^3.2.3"
   }
 }
